removed fix for moving mobile menu trigger as its worst on mobile finally

--- a/apps/docs/components/ui/mobileMenu/mobileMenu.css
+++ b/apps/docs/components/ui/mobileMenu/mobileMenu.css
@@ -14,7 +14,6 @@
     align-items: center;
     border-bottom: var(--hd-border-size) solid var(--hd-color-neutral-border);
     height: var(--hd-header-height);
-    padding-right: 0.9375rem;
 }
 
 .hd-mobile-menu__close {
